# MTGScanner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  qtquickcontrols2.conf  vcpkg.json
MTGScanner/: CMakeLists.txt  Main.qml  channeloptions.hpp  mtgscanner.cpp  mtgscanner.h
MTGScanner/Components/: ActiveFiltersCard.qml  CMakeLists.txt  CameraPreviewCard.qml  CameraSourceCard.qml  ChannelWizard.qml  HeaderSection.qml  OutputWindowCard.qml  SideBar.qml  StatusSection.qml
MTGScanner/Controls/: CMakeLists.txt  IconLabel.qml  TabButton.qml
MTGScanner/Pages/: CMakeLists.txt  CameraConfiguration.qml  Dashboard.qml  OutputWindows.qml
MTGScanner/src/: channel.hpp  channelmetrics.h  channeloptions.hpp
cmake/: helpers.cmake
src/: main.cpp  tbb_patched.hpp
src/camera/: availablecamerasmodel.cpp  availablecamerasmodel.h  cameracapture.cpp  cameracapture.h  cameramanager.cpp  cameramanager.h
src/core/: constants.hpp  frame.hpp  prediction.hpp
src/engine/: camerainfo.hpp  cameramodel.cpp  cameramodel.h  carddetector.cpp  carddetector.h  cardprocessor.cpp  cardprocessor.h  channel.hpp  channelinfo.hpp  channelmetrics.cpp  channelmetrics.h  channelmodel.cpp  channelmodel.h  channelraw.hpp  engine.cpp  engine.h  framespersecond.hpp
src/output/: nameplatdelegate.cpp  nameplatdelegate.h  nameplatemodel.cpp  nameplatemodel.h  outputwindow.cpp  outputwindow.h
